feat(auth-service): PR6a — Set.of() permissions + admin fallback removed (Dalga 3) (#397)
* feat(auth-service): PR6a — permissions Set.of() + admin fallback removed (Dalga 3)

TB-11 Dalga 3 PR6a: auth-service login response'ta permissions alani
breaking drop yerine Set.of() empty set doner. D-002 identity-only JWT
kurali + Zanzibar tuple-based authz'a gecis.

Degisiklikler:
- AuthService.login(): permissionServiceClient.getPermissions() cagrisi kaldirildi,
  permissions = Set.of() direkt atandi
- Admin fallback logic kaldirildi (security.admin-fallback.enabled bayragi
  unused; dev'de SecurityConfigLocal permitAll'a, prod'da gercek Zanzibar
  check'e guvenir)

Scope (minimum viable):
- permissionServiceClient field + constructor parameter KALDI (PR6b/c'de tamamen silinecek)
- PermissionServiceClient.java class KALDI (PR6b'de siliniyor sonra)
- Test'ler etkilenmedi (unused stub'lar Mockito lenient'ta warning verir, fail etmez)

Frontend Set.of() compat:
- JwtResponse.permissions alani korundu, icerik empty
- auth.slice.ts + LoginPopover.tsx breaking degil

Sonraki PR'lar:
- PR6b: JwtTokenProvider 'permissions' claim kaldir + downstream
- PR6c: report-service PermissionServiceClient HTTP → OpenFGA SDK migration
- Follow-up: permissionServiceClient + class'i auth-service'ten tamamen sil

Doctor A19 beklenen: 2 warn (AuthService 0 ref artik; class + JwtTokenProvider
ref'leri kalir — PR6b/c icin).

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* fix(test): PR6a - AuthServiceSessionAuditTest Set.of() expectation

PR #397 module-lane-integration fail: test verify(authAuditService).recordSessionCreated
expected Set.of("audit-read") ama AuthService artik Set.of() empty atiyor.

Fix:
- Unused stub `when(permissionServiceClient.getPermissions(99L, 42L))` silindi
  (PR6a: AuthService artik cagrimiyor; Mockito STRICT_STUBS unused hata atiyor)
- verify expected permissions: Set.of("audit-read") → Set.of()

Bu test PR6a davranisinin dogrulamasi: login sonra